--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
   <header>
     <div class="logo">SolarCar</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Über uns</a>
-      <a href="#">Technologie</a>
-      <a href="#">Team</a>
-      <a href="#">Sponsoren</a>
-      <a href="#">Kontakt</a>
+      <a href="index.html">Home</a>
+      <a href="Überuns.html">Über uns</a>
+      <a href="Technologie.html">Technologie</a>
+      <a href="Team.html">Team</a>
+      <a href="Sponsoren.html">Sponsoren</a>
+      <a href="Kontakt.html">Kontakt</a>
     </nav>
   </header>
 
   <section class="hero">
     <div class="hero-text">
       <h1>Die Zukunft fährt mit Sonnenkraft.</h1>
-      <button>
-        <a href="more.html">Mehr Erfahren</a>
-    </button>
     </div>
     <img src="Image.jpg" alt="SolarCar auf der Straße" />
   </section>
@@ -94,12 +91,12 @@
   <footer>
     <div class="logo">🚗 SolarCar</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Über uns</a>
-      <a href="#">Technologie</a>
-      <a href="#">Team</a>
-      <a href="#">Sponsoren</a>
-      <a href="#">Kontakt</a>
+      <a href="index.html">Home</a>
+      <a href="Überuns.html">Über uns</a>
+      <a href="Technologie.html">Technologie</a>
+      <a href="Team.html">Team</a>
+      <a href="Sponsoren.html">Sponsoren</a>
+      <a href="Kontakt.html">Kontakt</a>
     </nav>
     <p>© 2025 SolarCar. Alle Rechte vorbehalten.</p>
   </footer>
